[package]
name = "scriptdeck-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = { version = "4.4.0", features = [ "rustls" ] }
actix-web-actors = "4.2.0"
clap = { version = "4.4.2", features = [ "derive" ] }
dotenvy = "0.15.7"
env_logger = "0.10.0"
log = "0.4.20"
rhai = "1.15.1"
rustls = "0.21.7"
